Bug 123583 - Processing loop for SfxEnumItem<enum SwFootnoteEndPosEnum>
Summary: Processing loop for SfxEnumItem<enum SwFootnoteEndPosEnum>
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.0.0.0.alpha0+
Hardware: All Windows (All)
: highest major
Assignee: Jan-Marek Glogowski
URL:
Whiteboard: target:6.4.0
Keywords: bibisected, bisected, perf, regression
Depends on:
Blocks: VCL-Scheduler
  Show dependency treegraph
 
Reported: 2019-02-19 19:10 UTC by Telesto
Modified: 2021-08-26 09:17 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file (25.86 KB, application/vnd.oasis.opendocument.text)
2019-02-19 19:10 UTC, Telesto
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2019-02-19 19:10:07 UTC
Description:
Processing loop for SfxEnumItem<enum SwFootnoteEndPosEnum>

Steps to Reproduce:
1. Open the attached file (with spellchecker enabled)
2. CTRL+A & CTRL++C
3. Press CTRL+N & add 7 documents
4. Paste the content to all the documents.. A never ending process starts

Actual Results:
1 core in use.. endlessly

Expected Results:
Should stop


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 6.3.0.0.alpha0+
Build ID: aa51774e6a309f277e71ca3a3b9d5d5b4b3dbf1a
CPU threads: 4; OS: Windows 6.3; UI render: default; VCL: win; 
TinderBox: Win-x86@42, Branch:master, Time: 2019-02-18_06:06:03
Locale: nl-NL (nl_NL); UI-Language: en-US
Calc: CL
Comment 1 Telesto 2019-02-19 19:10:25 UTC
Created attachment 149429 [details]
Example file
Comment 2 Durgapriyanka 2019-03-12 15:55:10 UTC
Thank you for reporting the bug. But, I cannot reproduce this in

Version: 6.3.0.0.alpha0+
Build ID: b6b28931435e44aca92b8c0e1659f701e3ed1a87
CPU threads: 2; OS: Windows 6.1; UI render: default; VCL: win; 
TinderBox: Win-x86@42, Branch:master, Time: 2019-01-30_06:57:04
Locale: en-US (en_US); UI-Language: en-US
Calc: threaded
Comment 3 Telesto 2019-03-13 14:07:48 UTC
Still repro 
Version: 6.3.0.0.alpha0+
Build ID: ce01727e4d6779ea128aa1be09f4af8cad4e1854
CPU threads: 4; OS: Windows 6.3; UI render: default; VCL: win; 
Locale: nl-NL (nl_NL); UI-Language: en-US
Calc: threaded

STR
1. Open the attached file (with spellchecker enabled)
2. CTRL+A & CTRL+C
3. Press CTRL+N & CTRL+V
4. Keep repeating step 3 for 6-7 times
Comment 4 Dieter 2019-03-13 20:24:06 UTC
I repeated step 3 ten times but couldn't reproduce the bug

Version: 6.3.0.0.alpha0+ (x64)
Build ID: 91cdf22b88a4f7bec243c8fb187627e766d3294c
CPU threads: 4; OS: Windows 10.0; UI render: default; VCL: win; 
TinderBox: Win-x86_64@42, Branch:master, Time: 2019-03-08_00:38:10
Locale: en-US (de_DE); UI-Language: en-US
Calc: threaded
Comment 5 Telesto 2019-03-13 20:55:43 UTC
(In reply to Dieter Praas from comment #4)
> I repeated step 3 ten times but couldn't reproduce the bug
> 
> Version: 6.3.0.0.alpha0+ (x64)
> Build ID: 91cdf22b88a4f7bec243c8fb187627e766d3294c
> CPU threads: 4; OS: Windows 10.0; UI render: default; VCL: win; 
> TinderBox: Win-x86_64@42, Branch:master, Time: 2019-03-08_00:38:10
> Locale: en-US (de_DE); UI-Language: en-US
> Calc: threaded

Argh, should have been more precise.. LibO is behaving normally, only noticing a heavy - never ending - load in the background (task manager).
Comment 6 mulla.tasanim 2019-03-15 18:45:02 UTC
Hello Telesto

Thank you for reporting the bug.
I have repeated step 3 for 7 times and pasted contents in all documents
I can not reproduce the bug in

Version: 6.2.1.2 (x64)
Build ID: 7bcb35dc3024a62dea0caee87020152d1ee96e71
CPU threads: 4; OS: Windows 6.3; UI render: default; VCL: win; 
Locale: en-US (en_US); UI-Language: en-US
Calc: CL


Version: 6.3.0.0.alpha0+ (x64)
Build ID: 91cdf22b88a4f7bec243c8fb187627e766d3294c
CPU threads: 4; OS: Windows 6.3; UI render: default; VCL: win; 
TinderBox: Win-x86_64@42, Branch:master, Time: 2019-03-08_00:38:10
Locale: en-US (en_US); UI-Language: en-US
Calc: CL
Comment 7 Buovjaga 2019-03-17 13:56:10 UTC
Repro the neverending CPU load on Windows

Had to bibisect this twice as I first got a bad result (checked by git checkout the blamed one and then the previous one). With win32-6.0: https://gerrit.libreoffice.org/plugins/gitiles/core/+/3bf6c97029d26ddf20007c47ca6b68e5cc52d846%5E!/

tdf#112975 WIN correctly handle VclInputFlags::OTHER

Adding Cc: to Jan-Marek Glogowski

Another issue was previously blamed for this: bug 116370
Comment 8 Telesto 2019-04-13 17:42:30 UTC
Any chance for a small priority bump.. High Major, instead of Medium Major. The STR is quite artificial.. but it's hard estimate extend/scale of this bug. IMHO. 

Putting bug 124660 into see also; rather speculative..
Comment 9 Buovjaga 2019-04-13 18:03:00 UTC
(In reply to Telesto from comment #8)
> Any chance for a small priority bump.. High Major, instead of Medium Major.
> The STR is quite artificial.. but it's hard estimate extend/scale of this
> bug. IMHO. 
> 
> Putting bug 124660 into see also; rather speculative..

No need to ask, you have the power. Just use it within these guidelines: https://wiki.documentfoundation.org/images/0/06/Prioritizing_Bugs_Flowchart.jpg
Comment 10 Telesto 2019-04-13 19:45:51 UTC
(In reply to Buovjaga from comment #9)
> (In reply to Telesto from comment #8)
> > Any chance for a small priority bump.. High Major, instead of Medium Major.
> > The STR is quite artificial.. but it's hard estimate extend/scale of this
> > bug. IMHO. 
> > 
> > Putting bug 124660 into see also; rather speculative..
> 
> No need to ask, you have the power. Just use it within these guidelines:
> https://wiki.documentfoundation.org/images/0/06/Prioritizing_Bugs_Flowchart.
> jpg

Yes, I know I can change it. But the chart doesn't really fit.. There is no category.. for doing 'weird' stuff in the background which isn't affecting the functioning or performance.. Following the Priority Chart I end up at Low Trivial ;-)

I would even consider to High Critical.. but that's more guessing about the commonness..
Comment 11 Telesto 2019-06-26 20:04:05 UTC
Promoting this to highest (hope nobody objects). It's a horrible battery drain issue at minimum..
Comment 12 Jan-Marek Glogowski 2019-08-06 16:25:00 UTC
Tentative patch: https://gerrit.libreoffice.org/77040

This prevents Idles starving each other. WfM but will definitely needs some review. Would be nice to get some testing, before this is merged.
Comment 13 Commit Notification 2019-08-13 14:54:42 UTC
Jan-Marek Glogowski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/383032c50a3e3354f04200ce984a47ab9d2c5c67%5E%21

tdf#123583 use TaskStopwatch for Writer Idle loop

It will be available in 6.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 14 Xisco Faulí 2019-08-14 10:21:53 UTC
@Telesto, could you please verify this issue on master? I can't reproduce it with an older version of LibreOffice for comparison
Comment 15 Telesto 2019-08-15 10:13:47 UTC
No repro with
Version: 6.4.0.0.alpha0+ (x64)
Build ID: d3d13140f0036c53aa74820b41acfeffa3572168
CPU threads: 4; OS: Windows 6.3; UI render: default; VCL: win; 
TinderBox: Win-x86_64@62-TDF, Branch:master, Time: 2019-08-14_12:05:15
Locale: nl-NL (nl_NL); UI-Language: en-US
Calc: CL

As reference: repro with
Version: 6.4.0.0.alpha0+ (x86)
Build ID: a675fe37abc134cc5cbf54385ca99c8d1417ce2b
CPU threads: 4; OS: Windows 6.3; UI render: default; VCL: win; 
TinderBox: Win-x86@42, Branch:master, Time: 2019-07-26_09:09:34
Locale: nl-NL (nl_NL); UI-Language: en-US
Calc: CL